# timeseries_evaluation_arena

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: settings.yaml
notebooks/: 01_data_exploration.ipynb  02_single_cutoff_trap.ipynb  03_expanding_window_backtest.ipynb  04_decision_cost_metric.ipynb  05_when_calendar_models_break.ipynb
notebooks/outputs/results/: 01_summary_stats.json  02_protocol_a_75pct.json  02_protocol_a_80pct.json  02_rank_changes.json  02_rmse_vs_cutoff.json  03_backtest_airline_cutoffs.json  03_backtest_summary.json  04_cost_sensitivity.json  04_rmse_vs_decision_cost.json  05_anomaly_comparison.json  05_backtest_results.json
scripts/: gen_notebooks.py
src/: config.py  visualisation.py
src/datasets/: __init__.py  injector.py  loader.py
src/evaluation/: __init__.py  backtest.py  comparison.py  metrics.py
src/features/: __init__.py  lag_features.py
src/models/: __init__.py  arima.py  lstm_model.py  naive.py  prophet_model.py  xgboost_model.py
tests/: conftest.py  test_backtest.py  test_comparison.py  test_config.py  test_datasets.py  test_features.py  test_metrics.py  test_models.py  test_visualisation.py
