[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "timeseries-evaluation-arena"
version = "0.1.0"
description = "Your time series model is memorizing the calendar, not learning the signal"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "statsmodels>=0.14",
    "prophet>=1.1",
    "xgboost>=2.1",
    "torch>=2.4; sys_platform != 'emscripten'",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.38",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "ty>=0.0.1a7",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
    "nbclient>=0.10",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "SIM", "PTH"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
